# JuriCode-JP

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  data-correction.yml  new-law-request.yml  translation-fix.yml
.github/workflows/: ci.yml
archive/phase1-tax-pre-v0.2/chihou-zei-hou-shikkourei/: _source-manifest.json  chihou-zei-hou-shikkourei-article-1-2.md  chihou-zei-hou-shikkourei-article-1.md  chihou-zei-hou-shikkourei-article-10-2.md  chihou-zei-hou-shikkourei-article-10-3.md  chihou-zei-hou-shikkourei-article-10-4.md  chihou-zei-hou-shikkourei-article-10-5.md  chihou-zei-hou-shikkourei-article-10-7.md  chihou-zei-hou-shikkourei-article-10.md  chihou-zei-hou-shikkourei-article-11.md  chihou-zei-hou-shikkourei-article-15-4.md  chihou-zei-hou-shikkourei-article-16.md  chihou-zei-hou-shikkourei-article-18.md  chihou-zei-hou-shikkourei-article-19.md  chihou-zei-hou-shikkourei-article-20-2-10.md  chihou-zei-hou-shikkourei-article-20-2-14.md  chihou-zei-hou-shikkourei-article-20-2-16.md  chihou-zei-hou-shikkourei-article-20-2-19.md  chihou-zei-hou-shikkourei-article-20-2-20.md  chihou-zei-hou-shikkourei-article-20-2-21.md  chihou-zei-hou-shikkourei-article-20-2-23.md  chihou-zei-hou-shikkourei-article-20-2-24.md  chihou-zei-hou-shikkourei-article-20-2-25.md  chihou-zei-hou-shikkourei-article-20-2-27.md  chihou-zei-hou-shikkourei-article-20-2-4.md  chihou-zei-hou-shikkourei-article-20-2-5.md  chihou-zei-hou-shikkourei-article-20-2-6.md  chihou-zei-hou-shikkourei-article-20-2-7.md  chihou-zei-hou-shikkourei-article-20-2-9.md  chihou-zei-hou-shikkourei-article-20-3.md  chihou-zei-hou-shikkourei-article-21-10.md  chihou-zei-hou-shikkourei-article-21-3.md  chihou-zei-hou-shikkourei-article-21-7.md  chihou-zei-hou-shikkourei-article-21-8.md  chihou-zei-hou-shikkourei-article-21-9.md  chihou-zei-hou-shikkourei-article-22-2.md  chihou-zei-hou-shikkourei-article-23.md  chihou-zei-hou-shikkourei-article-24-2-2.md  chihou-zei-hou-shikkourei-article-24-2-3.md  chihou-zei-hou-shikkourei-article-24-2-4.md  (+391 more)
archive/phase1-tax-pre-v0.2/chihou-zei-hou-shikoukisoku/: chihou-zei-hou-shikoukisoku-article-1-10.md  chihou-zei-hou-shikoukisoku-article-1-12-3.md  chihou-zei-hou-shikoukisoku-article-1-12.md  chihou-zei-hou-shikoukisoku-article-1-13.md  chihou-zei-hou-shikoukisoku-article-1-14.md  chihou-zei-hou-shikoukisoku-article-1-15.md  chihou-zei-hou-shikoukisoku-article-1-16.md  chihou-zei-hou-shikoukisoku-article-1-17.md  (+216 more)
archive/v0.1/: README.md
benchmarks/: README.md  methodology.md
benchmarks/results/: .gitkeep  2026-05-20-baseline-tfidf.json  2026-05-20-gemini-6984-embed-log.txt  2026-05-20-gemini-6984.json  2026-05-20-gemini-6984.txt  2026-05-20-gemini-embedding-001.json  2026-05-21-ablation.json  2026-05-21-gemini-11760-v2.json  2026-05-21-gemini-11760-v3.json  2026-05-21-gemini-8022.json  2026-05-21-gemini-8022.txt  2026-06-02-reembed-aug-v4.json  2026-06-17-aug-v6-fu515.json  2026-06-21-aug-v7-fu515-supplproviso.json
data/: README.md
data/eval-set/: README.md  municipal.jsonl  police.jsonl  practitioner.jsonl  tax-table.jsonl  tax-taxanswer.jsonl  tax-tsutatsu.jsonl  tax.jsonl
data/phase1-police/: README.md
data/phase1-tax/: README.md
data/phase2-commercial/: README.md
docs/: README.md  architecture.html  architecture.md  differentiation.md  embed-providers.md  follow-ups.html  follow-ups.md  format-spec-v0.2.html  format-spec-v0.2.md  format-spec.html  format-spec.md  glossary.md  ir-spec.html  ir-spec.md  lawqa-jp-integration-notes.html  lawqa-jp-integration-notes.md  legal-review.md  licensing.md  strategy.md  tag-vocabulary.html  tag-vocabulary.md  v0.2-development-log-2026-05-22.md  verification-framework.md
examples/: README.md
examples/keihou/: keihou-article-36.md
examples/keiji-soshou-hou/: keiji-soshou-hou-article-198.md
examples/v0.2/: keihou-article-197.md  keihou-article-36.md  minpou-article-415-v0.2.md  minpou-article-415.md  minpou-article-5-v0.2.md  minpou-article-5.md
schema/: README.md  article.schema.json  case-link.schema.json  juricode-article.schema.json  juricode-directive.schema.json  juricode-taxanswer.schema.json  law-frontmatter.schema.json
tools/: README.md
tools/embed/: README.md  build-v0.2-corpus.py  convert-lawqa-to-evalset.py  embed.py  hyde.py  retrieve.py  run-ablation.py
tools/fetch-egov/: .gitignore  README.md  bulk-ingest.py  pyproject.toml  taxanswer-fetcher.py  tsutatsu-fetcher.py
tools/fetch-egov/src/fetch_egov/: __init__.py  cache.py  cli.py  client.py  law_id_map.py  models.py
tools/fetch-egov/tests/: test_client.py  test_tsutatsu_fetcher.py
tools/finetune/: generate-training-data.py  train-reranker.py
tools/parse/: README.md  _canonicalize.py  edge_registry.md  parse-egov.py  parse-nta-taxanswer.py  parse-nta-tsutatsu.py  verify.py
tools/scripts/: approve-eval-set.sh  check-cp932-safe.py  fix-phase-tags.py  run-ci.py  verify-eval-set-checksum.py
tools/search-ui/: README.md  anonymize-batch.py  index.html  server.py
tools/shared/: .gitignore  README.md  pyproject.toml
tools/shared/scripts/: export-schema.py
tools/shared/src/juricode_shared/: __init__.py  enums.py  frontmatter.py  ids.py  ir.py  paths.py  phase_tag.py  safe_write.py  text_norm.py
tools/shared/src/juricode_shared/anonymize/: __init__.py  normalize.py  pii_filter.py
tools/shared/src/juricode_shared/qlog/: __init__.py  schema.py  schema.sql  store.py
tools/shared/tests/: test_anonymize_normalize.py  test_build_v02_corpus_cli.py  test_check_cp932_safe.py  test_cli_help_smoke.py  test_directive_ir.py  test_fix_phase_tags_cli.py  test_frontmatter.py  test_ids.py  test_ir.py  test_paths.py  test_phase_tag.py  test_pii_filter.py  test_pii_pattern_persistence.py  test_qlog_schema.py  test_qlog_store.py  test_safe_write.py  test_taxanswer_ir.py  test_text_norm.py
tools/translate/: README.md
tools/validate/: README.md  _validate.py  validate-all.py  validate-file.py
(+29785 files in other folders)
