# JuriCode-JP — monorepo level pyproject.toml
#
# This is the **monorepo-level** project file. Individual tool packages
# (`tools/shared/`, `tools/validate/`, etc.) each have their own pyproject.toml
# with their own dependencies and tests.
#
# This file provides:
#   - One-command dev environment setup for contributors
#       (`pip install -e ".[dev]"`)
#   - Centralized lint/format/test configuration (ruff, pytest)
#   - Stable entry point for pre-commit hooks and CI
#
# See:
#   - tools/shared/pyproject.toml      — IR Pydantic package
#   - tools/validate/pyproject.toml    — Validation CLI package (planned)
#   - tools/fetch-egov/pyproject.toml  — e-Gov API client (planned)

[project]
name = "juricode-jp"
version = "0.1.0"
description = "JuriCode-JP monorepo: AI/LLM-ready Japanese legal data infrastructure"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "CHOKAI Co.,Ltd.", email = "sato@chokaijp.com" },
]
keywords = ["legal", "japan", "ai", "llm", "open-source", "legaltech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Japanese",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
]

# Top-level package is empty on purpose — actual code lives in tools/*/src/
dependencies = []

[project.optional-dependencies]
# Pull in every workspace package via editable installs.
# Contributors run `pip install -e ".[dev]"` to get the full toolchain.
dev = [
    # Workspace packages (editable installs handled outside pyproject for now)
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
    # Dev tooling
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
    # JSON Schema validation (used by tools/validate and external consumers)
    "jsonschema>=4.0",
    # NTA 通達/タックスアンサー HTML パーサ (tools/parse/parse-nta-*.py) の必須依存。
    # tools/parse/tests が CI で走るため dev に明示 (ハード依存・stdlib fallback なし)。
    "beautifulsoup4>=4.12",
]

# Optional extras for tools/export/lawsy-bq RAG-ready exporter.
# Install via `pip install ".[rag-export]"` to get precise token counts via
# tiktoken (o200k_base). When this extra is NOT installed, the exporter falls
# back to len(text)//2 and records token_method='char-based-fallback' so
# downstream RAG consumers can detect approximate counts.
rag-export = [
    "tiktoken>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/JuriCode-JP/JuriCode-JP"
Documentation = "https://github.com/JuriCode-JP/JuriCode-JP/tree/main/docs"
Issues = "https://github.com/JuriCode-JP/JuriCode-JP/issues"

# --- Build / setuptools ---
# This monorepo root is intentionally not a "real" buildable package.
# Individual sub-packages handle their own builds.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Tell setuptools we don't have any installable code at the root.
packages = []
include-package-data = false

# --- pytest (monorepo-wide test discovery) ---

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tools/shared/tests",
    "tools/validate/tests",
    # 2026-05-25: v0.2 parser tests + manifest 生成パッケージ tests を追加.
    # ディレクトリ名にドットを含むため `python -m manifest.cli` 形式の import が
    # 必要で、各 test ファイル内で sys.path manipulation を行う pattern.
    "tools/parse/v0.2/tests",
    "tools/parse/v0.2/manifest/tests",
    # 2026-06-24: NTA 通達パーサの CI-safe テスト (法人税 byte 回帰 FU-514 / 消費税取込)。
    "tools/parse/tests/test_tsutatsu_byte_regression.py",
    "tools/parse/tests/test_shouhi_tsutatsu.py",
    # 2026-06-24 FU-519: 多章マージ orchestration (--cache-root) の合成 fixture テスト
    # (章跨ぎ数値ソート / 目 source_url / dedup fail-loud / 前文・アーカイブ除外)。CI-safe。
    "tools/parse/tests/test_tsutatsu_multichapter.py",
    # 2026-06-25 FU-520: taxanswer related 抽出テスト。最小 committed corpus fixture を
    # 注入し build/chunks 非依存 (hermetic) 化したため CI に追加 (ロック済期待値は不変)。
    "tools/parse/tests/test_taxanswer_related.py",
    # 2026-07-01 FU-523 遅延配線: 所得税法基本通達 corpus fixture ゲート (1,227 件・共通通達回復回帰含む)。CI-safe (cache テストは skipif)。
    "tools/parse/tests/test_shotoku_corpus.py",
    # 2026-07-01 FU-524: 相続税法基本通達 corpus fixture ゲート (445 件・偽リンク回帰含む)。
    "tools/parse/tests/test_souzoku_corpus.py",
    # 2026-05-30: 柱1-A retrieve.py 純関数 unit test (dedup/RRF/candidate 選択).
    "tools/embed/tests",
    # 2026-07-01 FU-524: NTA 通達 fetcher の目次リンク分類 (extract_links) hermetic test。
    "tools/fetch-egov/tests/test_tsutatsu_fetcher.py",
]
pythonpath = [
    "tools/shared/src",
    "tools/validate",
]
# Don't auto-collect __pycache__ files left in mounted dirs.
# --import-mode=importlib: 2026-05-25 追加. 複数の `tests/` ディレクトリが
# 同名 package として衝突するのを回避 (tools/parse/v0.2/tests と
# tools/parse/v0.2/manifest/tests が両方 __init__.py を持つため).
# Pytest 公式推奨 import mode (https://docs.pytest.org/en/stable/explanation/pythonpath.html).
addopts = "--strict-markers --import-mode=importlib"
filterwarnings = [
    # Pydantic / cryptography emit deprecation warnings on Python 3.10
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# --- ruff (lint + format) ---

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "awards",      # internal working drafts, not shipped
    "business",    # internal advisor materials (.gitignored)
    ".git",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
# Conservative set: stylistic + obvious bugs, no opinionated rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade
    "B",      # flake8-bugbear (likely bugs)
    "RUF",    # ruff-specific suggestions
    "RET503", # flake8-return RET503: 'return 0 forget' を catch して false-green guard.
              # FU-503 で導入. main() の implicit None 戻りを lint 段階で検知し、
              # FU-502/504 と同型の false-green guarantee を構造的に防止.
              # RET504-508 (stylistic) は scope 外として除外.
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "RUF001",  # ambiguous-unicode-string-char (Japanese kanji vs Latin)
    "RUF002",  # ambiguous-unicode-docstring-char (same, in docstrings)
    "RUF003",  # ambiguous-unicode-comment-char (same, in comments)
]

[tool.ruff.lint.per-file-ignores]
# Tests can use longer descriptive names and assert without typing strictness
"**/tests/**" = ["B", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
