[project]
name = "fetch-egov"
version = "0.1.0"
description = "e-Gov 法令API v2 クライアント — JuriCode-JP のデータ取得層"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "CHOKAI Co.,Ltd.", email = "sato@chokaijp.com" },
]
requires-python = ">=3.11"
keywords = ["legal", "japan", "e-gov", "law", "legaltech", "juricode-jp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: XML",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
fetch-egov = "fetch_egov.cli:main"

[project.urls]
Homepage = "https://github.com/JuriCode-JP/JuriCode-JP"
Repository = "https://github.com/JuriCode-JP/JuriCode-JP"
Issues = "https://github.com/JuriCode-JP/JuriCode-JP/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fetch_egov"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
