[project]
name = "juricode-shared"
version = "0.1.0"
description = "JuriCode-JP 共通モデル(IR Pydantic / ID 規約 / パス規約 / frontmatter ヘルパ)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "CHOKAI Co.,Ltd.", email = "sato@chokaijp.com" },
]
requires-python = ">=3.11"
keywords = ["legal", "japan", "ir", "juricode-jp", "pydantic"]

dependencies = [
    "pydantic>=2.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/JuriCode-JP/JuriCode-JP"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/juricode_shared"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
